--- a/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
+++ b/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
@@ -13,7 +13,7 @@
                         >{{lead.link ? lead.link : lead.phone}}
                         </a>
                     </h4>
-                    <p>Дата создания: {{lead.created_at_o}}</p>
+                    <p>Дата создания: {{lead.created_at}}</p>
                     <div class="flex-block content-between">
                         <div>
                             <span class="lead__source-icon"></span>
