--- a/src/app/archives/archives.component.html
+++ b/src/app/archives/archives.component.html
@@ -1,3 +1,89 @@
-<p>
-  archives works!
-</p>
+
+<div class="container">
+<div class="row">
+  
+  <div class="col s12">
+        <h4>Архив лидов</h4>
+
+        <div class="filters">
+          <mz-checkbox-container>
+                  <input mz-checkbox
+                    [label]="'Только качественные'"
+                    id="dleadProcess-id"
+                    [(ngModel)]="dleadQuality"
+                    filledIn="true"
+                    class="filled-in"
+                    type="checkbox">
+          </mz-checkbox-container>
+          <mz-checkbox-container>
+                  <input mz-checkbox
+                    [label]="'Только некачественные'"
+                    id="dleadProcess-id2"
+                    [(ngModel)]="dleadQualityFalse"
+                    filledIn="true"
+                    class="filled-in"
+                    type="checkbox">
+          </mz-checkbox-container>
+        </div>
+  </div>
+</div>
+<div class="row">
+<div class="col s12 m6 l4" *ngFor="let lead of leads  | done:dleadQuality:dleadQualityFalse; let i = index">
+
+        <mz-card
+              [ngClass]="{'card' : true, 'card-lead' : true, 'lighten-1' : true, 'white-text' : true, 'green': lead.isQualityLead, 'red' : !lead.isQualityLead}"
+              [horizontal]="true"
+              [hoverable]="true"
+              (click)="openHistory($event, lead, i, nLeads)"
+              >
+              
+              <mz-card-content class="white-text">
+                  <p class="card-content__comments">({{lead.count_create}}) <span class="clip">{{lead.lastComment}}</span></p>
+
+                  <a
+                          class="lead-link white-text lighten-3"
+                          [href]="lead.link ? lead.link : 'tel:lead.phone'"
+                          [target]=" lead.link ? '_blanck' : ''">
+                      {{ lead.link ? lead.link : lead.phone }}
+                  </a>
+                  <div class="flex-block content-between items-center">
+                      <div class="lead__source">
+                          <span class="lead__source-icon"><svg fill="#fff" width="20px" height="20px" class="" style="border-color: rgb(255, 255, 255);"><use xlink:href="#unit-icon-1"></use></svg></span>
+                          &nbsp;
+                          <span class="lead__source-title">{{ lead.source_title }}</span>
+                          
+                      </div>
+
+                      <svg 
+                              *ngIf="lead.is_express_delivery"                                          
+                              fill="#fff"
+                              width="35px"
+                              height="20px"
+                          ><use xlink:href="#delivery-icon"></use>
+                          </svg>
+                          
+                      <div
+                          class="lead__unit-title  mac-ua__color"
+                          
+                          [style]="{backgroundColor:lead.unit_color}"
+                      >{{ lead.unit_title }}
+                      </div>
+                  </div>
+              </mz-card-content>
+              
+          </mz-card>
+    </div>
+
+</div>
+</div>
+      <div class="container center">
+          <div class="row">
+              <div class="col s12">
+                  <button (click)="loadLead()" class="btn waves-effect waves-light btn__end" type="submit" name="action">Загрузить еще
+                      <i class="material-icons right">send</i>
+                  </button>
+              </div>
+          </div>                
+      </div>
+
+  
