--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,35 @@
-<p>
-  users works!
-</p>
+<div class="container">
+  <div class="flex-block content-between items-center header-group">
+      <h4>Пользователи</h4>
+      <button class="waves-effect waves-light btn" mz-button (click)="openUserModal()">Новый пользователь</button>
+  </div>   
+
+  <table class="highlight">
+      <thead>
+      <tr>
+          <th>#</th>
+          <th>Имя</th>
+          <th>Фамилия</th>
+          <th>Почта</th>
+          <th>Роль</th>
+          <th>Действия</th>
+      </tr>
+      </thead>
+
+      <tbody *ngIf="users">
+        
+      <tr *ngFor="let user of users">
+          <td>{{user.id}}</td>
+          <td>{{user.firstname}}</td>
+          <td>{{user.lastname}}</td>
+          <td>{{user.email}}</td>
+          <td>{{user.rolename}}</td>
+          <td >
+              <!-- <a (click)="editUser(user.id)" class="waves-effect waves-light btn amber darken-1" >Редактировать</a> -->
+              <a (click)="deleteUser(user.id)" class="waves-effect waves-light btn red">Удалить</a>
+          </td>
+      </tr>
+
+      </tbody>
+  </table>
+</div>
