--- a/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
+++ b/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
@@ -17,11 +17,11 @@
                     <div class="flex-block content-between">
                         <div>
                             <span class="lead__source-icon"></span>
-                            <span class="lead__source-title">{{lead.source_title}}</span>
+                            <span class="lead__source-title"><strong>Источник:</strong> {{lead.source_title}}</span>
                         </div>
                         <div
                             class="lead__unit-title"
-                        >{{ lead.unit_title }}
+                        ><strong>Подразделение:</strong> {{ lead.unit_title }}
                         </div>
                     </div>
 
@@ -42,23 +42,22 @@
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col s12">
                 <div class="input-field">
                     <mz-select-container>
-                        <select mz-select formControlName="status_id" >
+                        <select mz-select formControlName="status_id" [label]="'Статус'">
                             <option value="" selected>Статус</option>
                             <option *ngFor="let status of statuses" [value]="status.id" >{{status.title}}</option>
                         </select>
                     </mz-select-container>
-                    <label>Статус</label>
+                
                 </div>
 
                 <div class="input-field" v-if="change_authors">
                         <mz-select-container>
-                            <select mz-select formControlName="user_id" >
+                            <select mz-select formControlName="user_id" [label]="'Автор'">
                                 <option value="" selected>newLeadChoose</option>
                                 <option *ngFor="let user of users" [value]="user.id" >{{user.firstname}}</option>
                             </select>
                         </mz-select-container>
         
-                        <label>Автор</label>
                 </div>
 
                 <div class="input-field">
