--- a/src/app/archives/task-archives/task-archives.component.html
+++ b/src/app/archives/task-archives/task-archives.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     
     <div class="col s12">
-          <h4>Архив лидов</h4>
+          <h4>Архив задач</h4>
     </div>
   </div>
   <div class="row">
