--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     
     <div class="container">
             <div class="flex-block content-between items-center header-group">
-                    <button class="waves-effect waves-light btn" mz-button (click)="openSourceModal()">Новый источник</button>
+                    <button class="waves-effect waves-light btn" mz-button (click)="openSourceModal()">Новый лид</button>
                 </div> 
         <div class="row">
             <owl-carousel 
